# Search-Problem-Solver

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  Comper.cpp  Comper.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Graph.cpp  Graph.h  Main.cpp  Main.h  Mat.cpp  Mat.h  MatCacheManager.cpp  MatCacheManager.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.cpp  OA.h  Position.cpp  Position.h  README.md  Searchable.cpp  Searchable.h  (+11 more)
